--- a/src/sass/components/prayer/_testimony-form.scss
+++ b/src/sass/components/prayer/_testimony-form.scss
@@ -36,11 +36,11 @@
   &__input {
     &--date,
     &--text {
+      font-size: 1.6rem;
       width: 100%;
       padding: 1rem;
       border: 1px solid $color-stone-200;
       border-radius: 1rem;
-      font-size: $font-size-base;
       transition: all 0.2s;
 
       &:focus {
